<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:gravity="center_horizontal"
        android:id="@+id/fullImage" />


    <ImageButton
        android:id="@+id/action_back"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:padding="16dp"
        android:scaleType="fitXY"
        android:tint="@color/colorAccent"
        ads:srcCompat="@drawable/ic_forward_white_48dp" />



</RelativeLayout>